welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:9: error: value gauche is not a member of Unit
def growFlowers(){jardiniere();jardiniere2();jardiniere();gauche();avance();droite();recule();recule();recule();recule();recule();recule();recule();recule();droite();avance();avance();avance();avance();avance();gauche();jardiniere()gauche();avance();avance();droite()} 
                                                                                                                                                                                                                                        ^